# kdm_for_probabilistic_DL_experiments

./: README.md  kqm.py  kqm_example.ipynb  overview_plots.ipynb  pyproject.toml
docker/: tensorflow_gpu_docker.sh
scripts/: classification.py  classification_with_density.py  experiment_learning_with_label_proportions.py  generative.py  learning_with_label_proportions.sh
src/kqm/: attach_dense_layer_to_encoder.py  attach_softmax_layer_to_encoder.py  autoencoder.py  bag_kqm_class_model.py  capture_config.py  capture_kqm_unit_params.py  capture_sigma_parameter_and_update_it_on_wandb.py  charge_dataset.py  charge_dataset_and_initialize_experiment.py  classifier_cnn_model.py  compile_autoencoder_model.py  compile_model.py  create_a_cnn_model.py  create_a_deep_encoder.py  create_a_deep_encoder_with_max_polling.py  create_a_deep_encoder_with_max_polling_batch_normalization_and_droupout.py  create_a_model_using_a_KQMUnitClassifier.py  create_autoencoder.py  decoder_model.py  display_imgs.py  encoded_decoded.py  encoder_model.py  evaluate_the_model.py  experiment_autoencoder_kqm.py  experiment_autoencoder_model.py  experiment_autoencoder_with_a_dense_layer_model.py  experiment_classification_cnn_model.py  experiment_classification_encoder_kqm.py  experiment_classification_encoder_kqmd.py  experiment_generative_kqm.py  experiment_generative_kqm_with_dense_layers.py  experiment_unet.py  finish_experiment.py  gen_pred_fun.py  general_experiment.py  generate_grid_config_from_base_and_array_parameter.py  initialize_kernel_sigma_parameter_using_pairwise_distance_of_prototypes.py  (+14 more)
