[tool.poetry]
name = "Neurips-2023-KQM"
version = "0.1.0"
description = ""
authors = ["author <author@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
tensorflow = "2.12.0"
jax = "^0.3.15"
keras = "2.12.0"
tensorflow-probability = "0.19.0"
scikit-learn = "^1.0.1"
pandas = "^1.1.5"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
wandb = "^0.15.0"
pathos = "^0.3.0"
networkx = "^3.1"
pillow = "^9.5.0"
image = "^1.5.33"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

venvPath = "~/.cache/pypoetry/virtualenvs/"
venv = "2023-neurips-kqm"
